# scale-alibi

./: .gitignore  README.md  aiai_salibi_download.sbatch  aiai_scale-alibi.sbatch  aiai_train.sbatch  pyproject.toml  wandb_sync.sh
lambdas/: README.md  scale-alibi-checkpoint-upload.py  scale-alibi-data-signer.py
notebooks/: CROMA training test.ipynb  attention_test.ipynb  croma training test-p8.ipynb  salibi training test-p8.ipynb  salibi training test.ipynb
rasters/: area.geojson
scale_alibi/: __init__.py  cli.py  infer.py  model.py  train.py  util.py
scale_alibi/croma/: __init__.py  pretrain_croma.py  use_croma.py
scale_alibi/dataset/: data.py  loader.py  models.py  mosaic.py  search.py  tile.py
scale_alibi/dataset/sources/: sentinel.py
site/: index.css  index.html  main.js  makefile  package-lock.json  scroller.js  vite.config.js
slurm/: aiai_download-datasets.sbatch  aiai_train_croma_large.sbatch  aiai_train_croma_small.sbatch  aiai_train_croma_small_p8.sbatch  aiai_train_croma_small_p8_l5.sbatch  aiai_train_salibi_large.sbatch  aiai_train_salibi_micro_p8.sbatch  aiai_train_salibi_small.sbatch  aiai_train_salibi_small_p8.sbatch  aiai_train_salibi_small_p8_l5.sbatch  aiai_upload_checkpoints.sbatch  aiai_upload_salibi_large.sbatch  aiai_upload_salibi_micro_p8.sbatch  aiai_upload_salibi_small_p8.sbatch
viewer/: index.css  index.html  main.js  package-lock.json  package.json
